# lossteach-gdgaic

./: .dockerignore  .gitignore  Jenkinsfile  LICENSE  Makefile  README.md  convert_to_onnx.py  docker-compose-app.yml  docker-compose-jenkins.yml  docker-compose.app.yml  docker-compose.observable-app.yml  docker-compose.yml  local_setup_with_docker.sh  local_setup_with_k8s.sh  local_setup_with_minikube.sh  pth_to_onnx.py  pyproject.toml
app/dashboard/: Dockerfile  main.py  requirements.txt
app/dashboard/src/: charts.py  config.py  helpers.py  style.css  utils.py  visualization.py
app/model-api/: .dockerignore  Dockerfile  main.py  metrics.py  requirements.txt  start_services.sh
app/model-api/models/: model_utils.py
app/model-api/routers/: health.py  predict.py
app/model-api/routers/core/: config.py
app/model-api/routers/schema/: fragment.py  predict_response.py
app/model-api/tests/: load_test.py
app/model-api/utils/: image_processing.py
bash_utils/: check_machine.sh  cluster.sh  logging_schema.sh  utils.sh
docs/: ladrs.md  screenshot.md
iac/terraform/environments/dev/: apply.sh  main.tf  outputs.tf  variables.tf
iac/terraform/environments/dev/.terraform/modules/: modules.json
iac/terraform/modules/: main.tf  outputs.tf  variables.tf
jenkins/: Dockerfile
k8s/: deployment.yaml  ingress.yaml  namespace.yaml
k8s/local/: deployment.yaml
notebooks/: aic-instance-4.ipynb
observe/alertmanager/: config.yml
observe/grafana/dashboards/: 1860_rev31.json
observe/prometheus/config/: alert-rules.yml  prometheus.yml
tests/: load_test.py
