[project]
name = "gdgaic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anyio>=4.9.0",
    "celery>=5.5.2",
    "numpy<2.0.0",
    "opencv-python>=4.11.0.86",
    "orjson>=3.10.18",
    "fastapi[standard]>=0.104.0",
    "uvicorn>=0.24.0",
    "redis>=5.0.1",
    "pydantic>=2.4.2",
    "streamlit>=1.45.0",
    "seaborn>=0.13.2",
    "onnx>=1.17.0",
    "onnxruntime==1.15.1",
    "tritonclient[all]>=2.56.0",
    "scipy>=1.13.1",
]
